ci-pipeline-unstructured/config-root/constraints/banned-key-constraint.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START anthos_config_management_config_root_constraints_k8sbannedconfigmapkeysv1_no_secrets_in_configmap]
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBannedConfigMapKeysV1
metadata:
  name: no-secrets-in-configmap
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - ConfigMap
  parameters:
    keys:
    - private_key
# [END anthos_config_management_config_root_constraints_k8sbannedconfigmapkeysv1_no_secrets_in_configmap]
---
